# fmritopics

./: Makefile  README.md  pyproject.toml  transmitter_analyses.html
data/: top_topics_over_time_minclust-500_nneighbors-40.csv
docs/: index.html
src/fmritopics/: additional_stopwords_topicmodel.txt  analyze_dynamic_topics.py  fit_dynamic_topic_model.py  get_abstracts.py  process_abstracts.py
